# xar_robot_stack

./: README.md  setup.sh
ros2_ws/src/xar_nav_manager/: package.xml  setup.cfg  setup.py
ros2_ws/src/xar_nav_manager/launch/: nav_manager.launch.py
ros2_ws/src/xar_nav_manager/xar_nav_manager/: battery_publisher.py  nav_manager.py  spin_driver.py
