<?xml version="1.0"?>
<package format="3">
  <name>xar_nav_manager</name>
  <version>0.1.0</version>
  <description>Voice-driven waypoint sequencer for Husarion ROSbot 3 Pro</description>

  <maintainer email="you@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <!-- runtime deps -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>nav2_msgs</exec_depend>
  <exec_depend>nav2_simple_commander</exec_depend>

  <buildtool_depend>ament_python</buildtool_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

